--- a/docs/31.md
+++ b/docs/31.md
@@ -207,11 +207,11 @@ def func():
 
 ### 创建 Cython 包装类
 
-此时，我们已经将我们的 pyx 文件的命名空间暴露给 C ++ Rectangle 类型的接口。现在，我们需要从外部 Python 代码访问它（这是我们的全部观点）。
+此时，我们已经将C ++ Rectangle 类型的接口暴露给我们的 pyx 文件的命名空间了。现在，我们需要从外部 Python 代码访问它（我们的主要目的）。
 
-常见的编程实践是创建一个 Cython 扩展类型，它将 C ++实例作为属性保存并创建一堆转发方法。所以我们可以将 Python 扩展类型实现为：
+常见的编程做法是创建一个 Cython 扩展类型来将 C ++实例作为属性保存起来并创建一堆转发方法。所以我们可以将 Python 扩展类型实现为：
 
-```py
+```python
 # distutils: language = c++
 
 from Rectangle cimport Rectangle
@@ -238,9 +238,9 @@ cdef class PyRectangle:
 
 ```
 
-我们终于得到它了。从 Python 的角度来看，这种扩展类型的外观和感觉就像本机定义的 Rectangle 类一样。需要注意的是，如果要提供属性访问权限，可以实现一些属性：
+我们终于做到了。从 Python 的角度来看，这种扩展类型的外观和感觉就像本机定义的 Rectangle 类一样。需要注意的是，如果要提供属性访问权限，可以实现一些属性：
 
-```py
+```python
 # distutils: language = c++
 
 from Rectangle cimport Rectangle
@@ -296,9 +296,9 @@ cdef class PyRectangle:
 
 ```
 
-Cython 使用 nullary 构造函数初始化 cdef 类的 C ++类属性。如果要包装的类没有构造函数，则必须存储指向包装类的指针并手动分配和取消分配它。一个方便和安全的地方是 &lt;cite&gt;__cinit__&lt;/cite&gt; 和 &lt;cite&gt;__dealloc__&lt;/cite&gt; 方法，保证在创建和删除 Python 实例时只调用一次。
+Cython 使用无参构造器初始化 cdef 类的 C ++类属性。如果要包装的类没有无参构造器，则必须存储指向包装类的指针并手动分配和解除分配。或者，也可以使用 [`cpp_locals` 指令](#cpp_locals指令) 来避免对指针的需要且仅在C ++属性被赋值的时候才初始化它们。一个方便且安全地执行手动分配和解除分配的地方是 *__cinit__* 和 *__dealloc__* 方法中 -- 这两个方法Cython保证会在创建和删除 Python 实例时调用、且保证只调用一次。
 
-```py
+```python
 # distutils: language = c++
 
 from Rectangle cimport Rectangle
@@ -316,9 +316,9 @@ cdef class PyRectangle:
 
 ## 编译和导入
 
-要编译 Cython 模块，必须有一个`setup.py`文件：
+要编译 Cython 模块，必须有一个 `setup.py` 文件：
 
-```py
+```python
 from distutils.core import setup
 
 from Cython.Build import cythonize
@@ -327,11 +327,11 @@ setup(ext_modules=cythonize("rect.pyx"))
 
 ```
 
-运行`$ python setup.py build_ext --inplace`
+运行 `$ python setup.py build_ext --inplace`
 
-要测试它，打开 Python 解释器：
+要测试编译结果，可以打开 Python 解释器：
 
-```py
+```python
 >>> import rect
 >>> x0, y0, x1, y1 = 1, 2, 3, 4
 >>> rect_obj = rect.PyRectangle(x0, y0, x1, y1)
@@ -349,9 +349,9 @@ setup(ext_modules=cythonize("rect.pyx"))
 
 ### 重载
 
-重载非常简单。只需使用不同的参数声明方法并使用其中任何一个：
+重载非常简单。只需使用不同的参数声明同一个方法并使用其中任意一个：
 
-```py
+```python
 cdef extern from "Foo.h":
     cdef cppclass Foo:
         Foo(int)
@@ -363,9 +363,9 @@ cdef extern from "Foo.h":
 
 ### 重载运算符
 
-Cython 使用 C ++命名来重载运算符：
+Cython 为重载的运算符使用 C ++命名：
 
-```py
+```python
 cdef extern from "foo.h":
     cdef cppclass Foo:
         Foo()
@@ -394,9 +394,9 @@ y = 2.0/foo[0]
 
 ```
 
-请注意，如果有一个 _ 指针 _ 到 C ++对象，则必须进行解除引用以避免执行指针算术而不是对对象本身进行算术运算：
+请注意，如果有一个 *指针* 指向 C ++对象，则必须进行解除引用以避免执行指针算术而不是对对象本身进行算术运算：（**译者注：Cython语义仅支持 `ptr[0]` 这种解除引用的方式，不支持 `*ptr`**)
 
-```py
+```python
 cdef Foo* foo_ptr = new Foo()
 foo = foo_ptr[0] + foo_ptr[0]
 x = foo_ptr[0] / 2
@@ -407,9 +407,9 @@ del foo_ptr
 
 ### 嵌套类声明
 
-C ++允许嵌套类声明。类声明也可以嵌套在 Cython 中：
+C ++允许嵌套类声明。Cython 中也允许：
 
-```py
+```python
 # distutils: language = c++
 
 cdef extern from "<vector>" namespace "std":
@@ -426,32 +426,32 @@ cdef extern from "<vector>" namespace "std":
         iterator begin()
         iterator end()
 
-cdef vector[int].iterator iter  #iter is declared as being of type vector<int>::iterator
+cdef vector[int].iterator iter  #iter 被声明为类型 vector<int>::iterator
 
 ```
 
-请注意，嵌套类使用`cppclass`声明但没有`cdef`，因为它已经是`cdef`声明部分的一部分。
+请注意，嵌套类使用 `cppclass` 声明但没有 `cdef` ，因为它已经是 `cdef` 声明部分的一部分。
 
 ### C ++运算符与 Python 语法不兼容
 
-Cython 尝试使其语法尽可能接近标准 Python。因此，某些 C ++运算符（如 preincrement `++foo`或解除引用运算符`*foo`）不能与 C ++使用相同的语法。 Cython 提供了在特殊模块`cython.operator`中替换这些运算符的函数。提供的功能是：
+Cython 尝试使其语法尽可能接近标准 Python。因此，某些 C ++运算符（如预增运算符 `++foo` 或解除引用运算符 `*foo` ）不能与 C ++使用相同的语法。 Cython 提供了在特殊模块 `cython.operator` 中替换这些运算符的函数。提供的函数包括：
 
-*   用于解除引用的`cython.operator.dereference`。 `dereference(foo)`将生成 C ++代码`*(foo)`
-*   `cython.operator.preincrement`用于预增量。 `preincrement(foo)`将生成 C ++代码`++(foo)`。类似地`predecrement`，`postincrement`和`postdecrement`。
-*   逗号运算符的`cython.operator.comma`。 `comma(a, b)`将生成 C ++代码`((a), (b))`。
+*   用于解除引用运算符的 `cython.operator.dereference` 。 `dereference(foo)` 将生成 C ++代码 `*(foo)`
+*   用于预增运算符的 `cython.operator.preincrement`。 `preincrement(foo)` 将生成 C ++代码 `++(foo)` 。类似地还有 `predecrement` （预减）、`postincrement` （后增）和 `postdecrement` （后减）
+*   用于逗号运算符的 `cython.operator.comma`。 `comma(a, b)` 将生成 C ++代码 `((a), (b))` 。
 
-这些功能需要被引导。当然，可以使用`from ... cimport ... as`来获得更短且更易读的功能。例如：`from cython.operator cimport dereference as deref`。
+这些功能需要被引入( `cimport` )。当然，可以使用 `from ... cimport ... as` 来获得更短、更易读的函数。例如：`from cython.operator cimport dereference as deref`。
 
-为了完整起见，还值得一提的是`cython.operator.address`，它也可以写成`&foo`。
+为了完整起见，值得一提还有 `cython.operator.address`，它也可以写成 `&foo` 。
 
 ### 模板
 
-Cython 使用括号语法进行模板化。包装 C ++向量的一个简单示例：
+Cython 使用括号语法进行模板化。下面是包装 C ++向量的一个简单例子：
 
-```py
+```python
 # distutils: language = c++
 
-# import dereference and increment operators
+# 引入解除引用运算符和预增运算符
 from cython.operator cimport dereference as deref, preincrement as inc
 
 cdef extern from "<vector>" namespace "std":
@@ -482,11 +482,11 @@ del v
 
 ```
 
-可以将多个模板参数定义为列表，例如`[T, U, V]`或`[int, bool, char]`。可以通过写`[T, U, V=*]`来指示可选的模板参数。如果 Cython 需要显式引用不完整模板实例化的默认模板参数的类型，它将写入`MyClass&lt;T, U&gt;::V`，因此如果类为其模板参数提供 typedef，则最好在此处使用该名称。
+可以将多个模板参数定义为列表，例如 `[T, U, V]` 或 `[int, bool, char]` 。可以通过写 `[T, U, V=*]` 来指示可选的模板参数。如果 Cython 需要显式引用不完整模板实例化的默认模板参数的类型，它将写入  `MyClass<T, U>::V` ，因此如果类为其模板参数提供 typedef，则最好在此处使用该名称。
 
 模板函数的定义与类模板类似，模板参数列表位于函数名称后面：
 
-```py
+```python
 # distutils: language = c++
 
 cdef extern from "<algorithm>" namespace "std":
@@ -499,11 +499,11 @@ print(max(1.5, 2.5))  # simple template argument deduction
 
 ### 标准库
 
-C ++标准库的大多数容器已在位于 [/ Cython / Includes / libcpp](https://github.com/cython/cython/tree/master/Cython/Includes/libcpp) 中的 pxd 文件中声明。这些容器是：deque，list，map，pair，queue，set，stack，vector。
+C ++标准库的大多数容器已被声明在位于 [/ Cython / Includes / libcpp](https://github.com/cython/cython/tree/master/Cython/Includes/libcpp) 中的 pxd 文件中。这些容器是：deque，list，map，pair，queue，set，stack，vector。
 
 例如：
 
-```py
+```python
 # distutils: language = c++
 
 from libcpp.vector cimport vector
@@ -524,9 +524,9 @@ for x in vect:
 
 [/ Cython / Includes / libcpp](https://github.com/cython/cython/tree/master/Cython/Includes/libcpp) 中的 pxd 文件也是如何声明 C ++类的好例子。
 
-STL 容器强制执行相应的 Python 内置类型。转换是通过赋值给类型变量（包括类型化函数参数）或通过显式强制转换来触发的，例如：
+STL 容器和相应的 Python 内置类型之间双向强制转换。转换是通过赋值给类型变量（包括类型化函数参数）或通过显式强制转换来触发的，例如：
 
-```py
+```python
 # distutils: language = c++
 
 from libcpp.string cimport string
@@ -549,22 +549,27 @@ print(cpp_strings[1])   # b'is'
 
 ```
 
-可以使用以下强制措施：
+下面的强制转换是可以的。
 
-<colgroup><col width="35%"> <col width="31%"> <col width="33%"></colgroup> 
-| Python type =＆gt; | _C ++类型 _ | =＆GT; Python 类型 |
+| Python type => | *C ++类型* | => Python 类型 |
 | --- | --- | --- |
-| 字节 | 的 std :: string | bytes |
-| 迭代 | 的 std ::矢量 | 名单 |
-| iterable | 的 std ::名单 | list |
-| iterable | 的 std ::设为 | 组 |
-| 可迭代的（len 2） | 的 std ::对 | 元组（len 2） |
+| bytes 字节类 | std :: string | bytes |
+| iterable 可迭代对象 | std :: vector | list |
+| iterable | std :: list | list |
+| iterable | std :: set | tuple 元祖 |
+| iterable | std :: unordered_set | set |
+| iterable | std :: map | dict |
+| iterable | std :: unordered_map | dict |
+| iterable (长度为2) | std :: pair | tuple（长度为2）|
+| complex | std :: complex | complex |
 
-所有转换都会创建一个新容器并将数据复制到其中。容器中的物品自动转换成相应的类型，包括递归地转换容器内的容器，例如容器。字符串映射的 C ++向量。
+所有转换都会创建一个新容器并将数据复制到其中。容器中的内容自动转换成相应的类型，包括递归地转换容器内的容器。例如，`C ++ vector of maps of strings`。
 
-通过`for .. in`语法（包括列表推导）支持对 stl 容器（或实际上任何具有`begin()`和`end()`方法的类返回支持递增，解除引用和比较的对象的迭代）的迭代。例如，人们可以写：
+请意识到这些转换都会有一些潜在的问题，可以在 [如何定位问题](http://docs.cython.org/en/latest/src/userguide/troubleshooting.html#automatic-conversion-pitfalls) 这里查看。（译者注：该文档还没有翻译完成）
 
-```py
+支持通过 `for .. in` 语法（包括列表推导式）对 stl 容器（或实际上任何具有返回对象的 `begin()` 和 `end()` 方法、且支持递增，解除引用和比较的类）的迭代。例如，可以写：
+
+```python
 # distutils: language = c++
 
 from libcpp.vector cimport vector
@@ -580,17 +585,15 @@ def main():
 
 ```
 
-如果未指定循环目标变量，则 [类型推断](source_files_and_compilation.html#compiler-directives) 使用类型`*container.begin()`的赋值。
+如果未指定循环目标变量，则使用 `*container.begin()` 赋值的类型来进行[类型推理](docs/29.md#编译器指令)。（译者注：查看编译器指令这一节的 `infer_type` 指令）。
 
-注意
-
-支持切片 stl 容器，你可以做`for x in my_vector[:5]: ...`，但与指针切片不同，它将创建一个临时的 Python 对象并迭代它。因此使迭代非常缓慢。出于性能原因，您可能希望避免切片 C ++容器。
+> 注意: 支持切片 stl 容器，你可以做 `for x in my_vector[:5]: ...`，但与指针切片不同，它将创建一个临时的 Python 对象并迭代它。因此使迭代非常缓慢。出于性能原因，您可能希望避免切片 C ++容器。
 
 ### 使用默认构造函数简化包装
 
-如果您的扩展类型使用默认构造函数（不传递任何参数）实例化包装的 C ++类，您可以通过将生命周期处理直接绑定到 Python 包装器对象的生命周期来简化生命周期处理。您可以声明一个实例，而不是指针属性：
+如果您的扩展类型使用默认构造函数（不传递任何参数）实例化包装的 C ++类，您可以通过直接绑定到 Python 包装器对象的生命周期来简化生命周期的处理。您可以声明一个实例，而不是指针属性：
 
-```py
+```python
 # distutils: language = c++
 
 from libcpp.vector cimport vector
@@ -612,20 +615,20 @@ cdef class VectorStack:
 
 Cython 将自动生成在创建 Python 对象时实例化 C ++对象实例的代码，并在 Python 对象被垃圾回收时删除它。
 
-### 例外情况
+### 异常
 
-Cython 不能抛出 C ++异常，或者用 try-except 语句捕获它们，但是可以将函数声明为可能引发 C ++异常并将其转换为 Python 异常。例如，
+Cython 不能抛出 C ++异常，或者用 try-except 语句捕获它们，但是可以将函数声明为可能引发 C ++异常并将其转换为 Python 异常(译者注：通过添加 **`except +`** )。例如，
 
-```py
+```python
 cdef extern from "some_file.h":
     cdef int foo() except +
 
 ```
 
-这会将 try 和 C ++错误转换为适当的 Python 异常。根据下表执行转换（从 C ++标识符中省略`std::`前缀）：
+这会将 try 和 C ++错误转换为适当的 Python 异常。根据下表执行转换（从 C ++标识符中省略 `std::` 前缀）：
 
-<colgroup><col width="52%"> <col width="48%"></colgroup> 
-| C ++ | 蟒蛇 |
+
+| C ++ | Python |
 | --- | --- |
 | `bad_alloc` | `MemoryError` |
 | `bad_cast` | `TypeError` |
@@ -637,39 +640,111 @@ cdef extern from "some_file.h":
 | `overflow_error` | `OverflowError` |
 | `range_error` | `ArithmeticError` |
 | `underflow_error` | `ArithmeticError` |
-| （所有其他人） | `RuntimeError` |
+| （所有其他情况） | `RuntimeError` |
 
-保留`what()`消息（如果有）。请注意，C ++ `ios_base_failure`可以表示 EOF，但是没有足够的信息供 Cython 识别，因此请注意 IO 流上的异常掩码。
+`what()` 消息如果有的话会被保留。请注意，C ++ `ios_base_failure` 可以表示 EOF，但是没有足够的信息供 Cython 识别，因此请注意 IO 流上的异常掩码。
 
-```py
+```python
 cdef int bar() except +MemoryError
 
 ```
 
 这将捕获任何 C ++错误并在其位置引发 Python MemoryError。 （任何 Python 异常在这里都有效。）
 
-```py
+Cython还支持使用自定义的异常处理器。这是一个大多数用户都不会使用的高级特性，但是如果你需要的话可以这么做：
+
+```python
 cdef int raise_py_error()
 cdef int something_dangerous() except +raise_py_error
 
 ```
 
-如果 something_dangerous 引发了 C ++异常，那么将调用 raise_py_error，这允许自定义 C ++到 Python 错误“翻译”。如果 raise_py_error 实际上没有引发异常，则会引发 RuntimeError。
+如果一些函数内的问题引发了 C ++异常，那么将调用 `raise_py_error` 并这允许自定义 C ++到 Python 错误的“翻译”过程。如果 `raise_py_error` 实际上没有引发异常，则会引发 RuntimeError。这种方式也可以用来管理使用Python C API创建的自定义Python异常。
 
-还有一种特殊的形式：
+```python
+# raising.pxd
+cdef extern from "Python.h" nogil:
+    ctypedef struct PyObject
 
-```py
+cdef extern from *:
+    """
+    #include <Python.h>
+    #include <stdexcept>
+    #include <ios>
+
+    PyObject *CustomLogicError;
+
+    void create_custom_exceptions() {
+        CustomLogicError = PyErr_NewException("raiser.CustomLogicError", NULL, NULL);
+    }
+
+    void custom_exception_handler() {
+        try {
+            if (PyErr_Occurred()) {
+                ; // let the latest Python exn pass through and ignore the current one
+            } else {
+                throw;
+            }
+        }  catch (const std::logic_error& exn) {
+            // Add mapping of std::logic_error -> CustomLogicError
+            PyErr_SetString(CustomLogicError, exn.what());
+        } catch (...) {
+            PyErr_SetString(PyExc_RuntimeError, "Unknown exception");
+        }
+    }
+
+    class Raiser {
+        public:
+            Raiser () {}
+            void raise_exception() {
+                throw std::logic_error("Failure");
+            }
+    };
+    """
+    cdef PyObject* CustomLogicError
+    cdef void create_custom_exceptions()
+    cdef void custom_exception_handler()
+
+    cdef cppclass Raiser:
+        Raiser() noexcept
+        void raise_exception() except +custom_exception_handler
+
+
+# raising.pyx
+create_custom_exceptions()
+PyCustomLogicError = <object> CustomLogicError
+
+
+cdef class PyRaiser:
+    cdef Raiser c_obj
+
+    def raise_exception(self):
+        self.c_obj.raise_exception()
+```
+
+上面这个例子使用了Cython逐字地将C代码添加到pxd文件中的特性，并创建了一个新的Python异常类型 `CustomLogicError` 并使用自定义的异常处理器将其映射到 C ++的 `std::logic_error`。这里使用一个标准的异常类型没有特别的意思， `std::logic_error` 可以被定义在这个文件里的新的 C ++异常类型替换。 `Raiser::raise_exception` 被标记为 `+custom_exception_handler` 来表示只要异常被引发该函数都会应该被调用。对应的Python函数 `PyRaiser.raise_exception` 被调用时会引发一个 `CustomLogicError` 。定义 `PyCustomLogicError` 则允许其他代码捕获这个异常。如下面代码所示：
+
+```python
+try:
+    PyRaiser().raise_exception()
+except PyCustomLogicError:
+    print("Caught the exception")
+```
+
+通常来说，当自定义异常处理器的时候，很有必要加入处理上面这个表格列出的一些Cython会处理的异常的逻辑。关于标准异常的处理器代码可以在[这里](https://github.com/cython/cython/blob/master/Cython/Utility/CppSupport.cpp)看。
+
+还有一种特殊的形式用于声明那些 **可能引发 Python 或者 C ++异常** 的函数：
+
+```python
 cdef int raise_py_or_cpp() except +*
 
 ```
-
-对于那些可能引发 Python 或 C ++异常的函数。
 
 ### 静态成员方法
 
 如果 Rectangle 类具有静态成员：
 
-```py
+```python
 namespace shapes {
     class Rectangle {
     ...
@@ -692,47 +767,76 @@ cdef extern from "Rectangle.h" namespace "shapes":
 
 ```
 
-### 声明/使用参考文献
+### 声明/使用引用
 
-Cython 支持使用标准`Type&`语法声明左值引用。但请注意，没有必要将 extern 函数的参数声明为引用（const 或其他），因为它对调用者的语法没有影响。
+Cython 支持使用标准 `Type&` 语法声明左值引用。但请注意，没有必要将 extern 函数的参数声明为引用（const 或其他），因为它对调用者的语法没有影响。
+
+### 枚举类
+
+在C ++模式下，Cython支持枚举类（或者作用域内的枚举）：
+
+```python
+cdef enum class Cheese:
+    cheddar = 1
+    camembert = 2
+```
+
+和"普通的"枚举类型一样,你可以以类型属性的方式访问这些枚举量。和普通枚举类型不同的是，这些枚举量对与 `Enclosing` 作用域不可见（译者注：这也正是C ++11 引入枚举类的原因。Enclosing是一个Python中存在的变量作用域范围，常见于闭包的概念中，没找到合适的词汇）
+
+```python
+cdef Cheese c1 = Cheese.cheddar  # 可以
+cdef Cheese c2 = cheddar  # 会报错
+```
+
+当然，你也可以声明枚举类的潜在类型。这对于用潜在类型来声明外部的枚举类而言很重要。
+
+```python
+cdef extern from "Foo.h":
+    cdef enum class Spam(unsigned int):
+        x = 10
+        y = 20
+        ...
+```
+
+用 `cpdef` 来创建枚举类将会创造一个 [PEP-435风格](https://peps.python.org/pep-0435/) 的Python包装器。
 
 ### `auto`关键字
 
-虽然 Cython 没有`auto`关键字，但是没有用`cdef`显式输入的 Cython 局部变量是从 _ 右侧的类型中推断出所有 _ 的分配（参见`infer_types` [编译指令](source_files_and_compilation.html#compiler-directives) ）。在处理返回复杂，嵌套，模板化类型的函数时，这尤其方便，例如：
+尽管 Cython 没有 `auto` 关键字，没有用 `cdef` 显式声明类型的 Cython 局部变量是从右侧的 ***所有赋值*** 的类型中推理出类型（参见 `infer_types` [编译指令](docs/29.md#编译器指令) ）。在处理返回复杂，嵌套，模板化类型的函数时，这尤其方便，例如：
 
-```py
+```python
 cdef vector[int] v = ...
 it = v.begin()
 
 ```
 
-（当然，对于支持迭代协议的对象，`for .. in`语法是首选。）
+（当然，对于支持迭代协议的对象，`for .. in` 语法是首选。）
 
-## RTTI 和 typeid（）
+## RTTI 和 typeid()
 
-Cython 支持`typeid(...)`运算符。
+Cython 支持 `typeid(...)` 运算符。
 
-> 来自 cython.operator cimport typeid
+> `from cython.operator cimport typeid`
 
-`typeid(...)`运算符返回`const type_info &`类型的对象。
+`typeid(...)` 运算符返回 `const type_info &` 类型的对象。
 
 如果要将 type_info 值存储在 C 变量中，则需要将其存储为指针而不是引用：
 
-```py
+```python
 from libcpp.typeinfo cimport type_info
 cdef const type_info* info = &typeid(MyClass)
 
 ```
 
-如果将无效类型传递给`typeid`，它将抛出`std::bad_typeid`异常，该异常在 Python 中转换为`TypeError`异常。
+如果将无效类型传递给 `typeid` ，它将抛出 `std::bad_typeid` 异常，该异常在 Python 中转换为 `TypeError` 异常。
 
-`libcpp.typeindex`中提供了另一个与 C ++ 11 兼容的 RTTI 相关类`std::type_index`。
+另一个与仅 C ++ 11 的 RTTI 相关类`std::type_index` 以 `libcpp.typeindex` 的方式提供。
 
 ## 在 setup.py 中指定 C ++语言
 
-可以在`setup.py`文件中声明它们，而不是在源文件中指定语言和源：
+可以在 `setup.py` 文件中声明它们，而不是在源文件中指定语言和源：
 
-```py
+```python
 from distutils.core import setup
 from Cython.Build import cythonize
 
@@ -744,13 +848,13 @@ setup(ext_modules = cythonize(
 
 ```
 
-Cython 将生成并编译`rect.cpp`文件（来自`rect.pyx`），然后它将编译`Rectangle.cpp`（`Rectangle`类的实现）并将两个目标文件一起链接到 Linux 上的`rect.so`或`rect.pyd`在 Windows 上，然后可以使用`import rect`在 Python 中导入（如果忘记链接`Rectangle.o`，则在 Python 中导入库时将丢失符号）。
+Cython 将生成并编译 `rect.cpp` 文件（从 `rect.pyx`），然后它将编译 `Rectangle.cpp` （ `Rectangle` 类的实现）并将两个目标文件一起链接到 (Linux 上的) `rect.so` 或 (在 Windows 上) `rect.pyd` ，然后可以使用 `import rect` 在 Python 中导入（如果忘记链接 `Rectangle.o` ，则在 Python 中导入库时将丢失标识符）。
 
-请注意，`language`选项对传递给`cythonize()`的用户提供的 Extension 对象没有影响。它仅用于按文件名找到的模块（如上例所示）。
+请注意， `language` 选项对传递给 `cythonize()` 的用户提供的 Extension 对象没有影响。它仅用于按文件名找到的模块（如上例所示）。
 
-Cython 版本中最大 0.21 的`cythonize()`功能无法识别`language`选项，需要将其指定为描述扩展名的`Extension`选项，然后由`cythonize()`处理，如下所示：
+0.21及之前版本的Cython 的 `cythonize()` 功能无法识别 `language` 选项，需要将其指定为描述扩展名的 `Extension` 选项，然后由 `cythonize()` 处理，如下所示：
 
-```py
+```python
 from distutils.core import setup, Extension
 from Cython.Build import cythonize
 
@@ -763,9 +867,9 @@ setup(ext_modules = cythonize(Extension(
 
 ```
 
-选项也可以直接从源文件传递，这通常是可取的（并覆盖任何全局选项）。从版本 0.17 开始，Cython 还允许以这种方式将外部源文件传递到`cythonize()`命令。这是一个简化的 setup.py 文件：
+选项也可以直接从源文件传递，这通常优先级更高（并覆盖任何全局选项）。从版本 0.17 开始，Cython 还允许以这种方式将外部源文件传递到 `cythonize()` 命令。这是一个简化的 setup.py 文件：
 
-```py
+```python
 from distutils.core import setup
 from Cython.Build import cythonize
 
@@ -776,7 +880,7 @@ setup(
 
 ```
 
-在.pyx 源文件中，将其写入第一个注释块，在任何源代码之前，以 C ++模式编译它并将其静态链接到`Rectangle.cpp`代码文件：
+在.pyx 源文件中，将其写入第一个注释块，在任何源代码之前，以 C ++模式编译它并将其静态链接到 `Rectangle.cpp` 代码文件：
 
 ```py
 # distutils: language = c++
@@ -784,19 +888,31 @@ setup(
 
 ```
 
-Note
+> 注意：使用 distutils 指令时，路径是相对于 distutils 运行的工作目录的相对路径（通常是 `setup.py` 所在的项目根目录）。
 
-使用 distutils 指令时，路径相对于 distutils 运行的工作目录（通常是`setup.py`所在的项目根目录）。
+要手动编译（例如使用 `make` ），可以使用 `cython` 命令行实用程序生成 C ++ `.cpp` 文件，然后将其编译为 python 扩展。使用 `--cplus`选项打开 `cython` 命令的 C ++模式。
 
-要手动编译（例如使用`make`），可以使用`cython`命令行实用程序生成 C ++ `.cpp`文件，然后将其编译为 python 扩展。使用`--cplus`选项打开`cython`命令的 C ++模式。
+### cpp_locals指令
+
+`cpp_locals` 这个编译器指令是实验性的，用来让C ++对象表现地更像是Python对象变量。在启用这个指令的时候，C ++变量仅在第一次赋值的时候被初始化，因此不再需求一个无参构造器来在堆栈上分配。尝试访问一个没有初始化的 C ++变量会产生 `UnboundLocalError` （或者类似的），就像Python对象那样。比如：
+
+```python
+def function(dont_write):
+    cdef SomeCppClass c  # 没有初始化
+    if dont_write:
+        return c.some_cpp_function()  # UnboundLocalError
+    else:
+        c = SomeCppClass(...)  # 初始化了
+        return c.some_cpp_function()  # OK
+```
 
 ## 警告和限制
 
 ### 访问仅限 C 的函数
 
-每当生成 C ++代码时，Cython 都会生成函数的声明和调用，假设这些函数是 C ++（即，未声明为`extern "C" {...}`。如果 C 函数具有 C ++入口点，这是可以的，但如果它们只是 C，那么你将遇到障碍。如果你有一个 C ++ Cython 模块需要调用 pure-C 函数，你需要编写一个小的 C ++ shim 模块：
+每当生成 C ++代码时，Cython 都会生成函数的声明和调用，假设这些函数是 C ++（即，未声明为 `extern "C" {...}` 。如果 C 函数具有 C ++入口点，这是可以的，但如果它们只是 C，那么你将遇到障碍。如果你有一个 C ++ Cython 模块需要调用 纯 C 函数，你需要编写一个小的 C ++ shim 模块：
 
-*   包括 extern“C”块中所需的 C 头
+*   Include extern“C”块中所需的 C 头文件
 *   包含 C ++中的最小转发函数，每个函数都调用相应的 pure-C 函数
 
 ### C ++左值
