Update 31.md 完成

--- a/docs/31.md
+++ b/docs/31.md
@@ -906,6 +906,12 @@ def function(dont_write):
         return c.some_cpp_function()  # OK
 ```
 
+不仅如此，这个指令还能够，在Cython需要在生成代码中使用临时C ++对象时（通常是为了存储可能抛出异常的函数返回值），避免在这些C ++临时对象被赋值前初始化，
+
+为了追求更快的速度， `initializedcheck` 这个编译器指令可以禁止执行对未绑定的局部变量进行检测。在该指令被开启时，访问一个没有被初始化的变量会引发无法预料的行为（译者注：直接访问可能会抛出 UnboundError），因此使用者需要自己避免这种情况的发生。
+
+`cpp_locals` 这个编译器指令目前是用 `std::optional` 来实现的，因此需要兼容 C ++17的编译器。 给C ++编译器定义 `CYTHON_USE_BOOST_OPTIONAL`的话则会用 `boost::optional` 来代替（译者注：代替默认的  `std::optional` 实现，但是更加实验性、未经测试）。这条编译器指令可能会带来内存和性能的额外开销，因为需要存储、检查一个追踪变量是否已经初始化的布尔型变量，但是C ++编译器应该能在大多数场景下消除这个检查。
+
 ## 警告和限制
 
 ### 访问仅限 C 的函数
@@ -917,4 +923,4 @@ def function(dont_write):
 
 ### C ++左值
 
-C ++允许返回引用的函数为 left-values。 Cython 目前不支持此功能。 `cython.operator.dereference(foo)`也不被视为左值。
+C ++允许返回引用的函数为左值。 Cython 目前不支持此功能。 `cython.operator.dereference(foo)` 也不被视为左值。
