--- a/docs/34.md
+++ b/docs/34.md
@@ -18,17 +18,17 @@ def f((a,b), c):
 
 这在 Python 3 中被删除了。
 
-## 检查支持
+## Inpsect模块的支持
 
 虽然很有可能在 Cython 自己的函数类型中模拟函数的接口，并且最近的 Cython 版本在这里看到了一些改进，但“inspect”模块并没有将 Cython 实现的函数视为“函数”，因为它测试了对象类型显式而不是比较抽象接口或抽象基类。这对使用 inspect 来检查函数对象的代码有负面影响，但是需要对 Python 本身进行更改。
 
 ## 堆栈帧
 
-目前，我们生成假追踪作为异常传播的一部分，但不填写本地并且无法填写 co_code。为了完全兼容，我们必须在函数调用时生成这些堆栈帧对象（具有潜在的性能损失）。我们可以选择启用此功能进行调试。
+目前，我们生成假追踪作为异常传播的一部分，但不填写本地并且无法填写 `co_code` (译者注：指函数的字节码指令序列)。为了完全兼容，我们必须在函数调用时生成这些堆栈帧对象（具有潜在的性能损失）。我们可以选择启用此功能进行调试。
 
-## 推断文字的身份与平等
+## (推理的)字面量的身份和相等性
 
-```py
+```python
 a = 1.0          # a inferred to be C type 'double'
 b = c = None     # b and c inferred to be type 'object'
 if some_runtime_expression:
