--- a/docs/43.md
+++ b/docs/43.md
@@ -1,7 +1,7 @@
 # 从Cython0.29迁移到3.0
 > 原文：[http://docs.cython.org/en/latest/src/userguide/migrating_to_cy30.html](http://docs.cython.org/en/latest/src/userguide/migrating_to_cy30.html)
 
-Cython3.0是语言和编译器的一次大更行，带来了一些不可向后兼容的修改。这个文档将会列出**其中比较重要**的内容并说明如果在现有代码中处理。
+Cython3.0是语言和编译器的一次大更新，带来了一些不可向后兼容的修改。这个文档将会列出**其中比较重要**的内容并说明如果在现有代码中处理。
 
 ## Python 3 语法/语义
 
@@ -39,3 +39,65 @@ class MyClass(object):
     no_method = staticmethod(func)
 
 ```
+
+## 命名空间包
+
+根据[PEP-420](https://www.python.org/dev/peps/pep-0420/), Cython现在还支持从命名空间包中加载pxd文件。这可能会对引用路径造成影响。
+
+## NumPy C-API
+
+Cython过去基于过时的 pre-NumPy-1.7 C-API 来生成代码。Cython3.0起不再是这样了。
+
+你可以通过定义宏 `NPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION` 来去掉长久以来的构建警告：“编译器的C模块使用了过时的API”。要么在每个文件中：
+
+```python
+# distutils: define_macros=NPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION
+```
+
+要么在你的 `setup.py` 的 Extension对象中：
+
+```python
+Extension(...
+    define_macros=[("NPY_NO_DEPRECATED_API", "NPY_1_7_API_VERSION")]
+)
+```
+
+使用不同的C-API的一个副作用是你的代码现在需要调用 [NumPy C-API 初始化函数](https://docs.scipy.org/doc/numpy-1.17.0/reference/c-api.array.html#importing-the-api) -- 之前的版本中不必这么做。
+
+为了这一点降低对用户对影响，当Cython3.0看到 `numpy` 被 `cimport` 但是函数还没有被使用的时候会自动调用（这个初始化函数）。在那些你不需要这么做（希望很少）的场景下，内部C-API的初始化可以被通过伪造一次函数使用但是并不真的调用来禁用，比如：
+
+```python
+# 显式禁用 NumPy's C-API 的自动初始化.
+<void>import_array
+```
+
+## 类私有名称的损毁
+
+Cython更新后会更遵循[Python对于类私有名称的规则](https://docs.python.org/3/tutorial/classes.html#private-variables)。任何类内部以 `__` 开头但是不以 `__` 结尾的名称都会用类名称毁坏。大多数用户的代码应该不受影响 - 和Python不同的是，没有毁坏的全局名称仍然可以访问以保证能够访问以 `__` 开头的C名称。
+
+```python
+cdef extern void __foo()
+
+class C: # or "cdef class"
+   def call_foo(self):
+       return __foo() # 调用的仍然是全局名称
+
+```
+
+覆盖 `cdef class` 里的 `__` 开头的方法将变得无效。
+
+```python
+cdef class Base:
+    cdef __bar(self):
+        return 1
+
+    def call_bar(self):
+        return self.__bar()
+
+cdef class Derived(Base):
+    cdef __bar(self):
+        return 2
+
+```
+
+这里
