--- a/docs/43.md
+++ b/docs/43.md
@@ -100,4 +100,12 @@ cdef class Derived(Base):
 
 ```
 
-这里
+这里 `Base.__bar` 已经变为 `_Base__bar` 且 `Derived.__bar` 变为 `_Derived__bar` 。 因此 `call_bar` 会调用 `_Base__bar` 。这和Python行为一致，对 `def` 、 `cdef` 、 `cpdef` 的方法和属性都适用。
+
+## 算术特殊方法
+
+用 `cdef` 定义的类的算术特殊方法的表现在Cython3.0中改变了。像在纯Python中一样，这些类现在支持使用特殊的反向版本的方法，比如（ `__radd__` 和 `__rpow__` ）。主要的不兼容的变更是第一个操作数（通常是说 `__self__` ）的类型现在被假设为定义类，而不是由用户去测试和强制转换每个操作数(类型)。
+
+可以通过设置编译器指令 `c_api_binop_methods=True` 来使用原先的行为。更多的细节可以在[算法方法](docs/26.md#算术方法)中阅读。
+
+
