Update 43.md 完成

--- a/docs/43.md
+++ b/docs/43.md
@@ -108,4 +108,68 @@ cdef class Derived(Base):
 
 可以通过设置编译器指令 `c_api_binop_methods=True` 来使用原先的行为。更多的细节可以在[算法方法](docs/26.md#算术方法)中阅读。
 
+## 异常值和 `noexcept`
+
+非 `extern` 的 `cdef` 函数现在能在默认情况下安全的传播Python异常。之前，他们需要被显式声明一个[异常值](docs/24.md#错误返回值)来防止他们遮蔽异常。一个新的 `noexcept` 修饰符可以被用来声明一个 `cdef` 函数绝对不会引发任何异常。
+
+在现有的代码中，你应该主要检查那些没有声明异常值的的 `cdef` 函数。
+
+```python
+cdef int spam(int x):
+    pass
+
+cdef void silent(int x):
+    pass
+```
+
+如果你错误地忘记写异常值了，比如：一个函数应该传播Python异常，那么在新版本中Cython会帮你传播、并且正常的传播任何异常。这在Cython代码中是一个常见的错误，因此也是这项更新的主要原因。
+
+另一方面，在之前的版本中，如果你是因为希望避免从这个函数中传播任何Python异常所以才不声明异常值的，那么新版本将会生成性能稍微低一些的代码，因为现在会增加一个异常检查。如果你不想执行异常检查，你必须显式的用 `noexcept` 来修饰函数。
+
+```python
+cdef int spam(int x) noexcept:
+    pass
+
+cdef void silent(int x) noexcept:
+    pass
+```
+
+对于 `extern` 的 `cdef` 函数被认为是较 非 `extern` 而言更不可能引发Python异常、它们更多的是引发C异常，因此默认行为没有改变。因此这一点抵消了对于需要和C库互动的代码的影响。
+
+对于任何显式声明了异常值的 `cdef` 函数，行为没有改变。（比如： `cdef int spam(int x) except -1` )
+
+对于 `nogil` 的函数这里有一个容易解决的潜在问题就是会隐式的声明为 `except *` 。这最有可能在返回类型为 `void` （原则上来说对大多数非数值型的返回值都适用）的时候发生。在这种情况下，Cython会被迫在每次含漱调用之后重新获取GIL来检查异常状态。如果需要避免这个额外开销，要么把含漱签名改为 `noexcept` （如果你确定合适的话），要么返回一个 `int` 并让Cython将int用作错误标识（默认情况下， `-1` 将会触发异常检查）。
+
+> 注意： 默认不传播异常的遗留行为可以通过设置编译器宏 `legacy_implicit_noexcept=True` 来获取。查看[编译器指令](docs/29.md#编译器指令)
+
+## 类型注解
+
+Cython3 在识别注解中的类型方面取得了较大的进步，阅读[纯Python风格](docs/17.md#pep-484-注解类型)来了解一些进步的内容是值得的。
+
+一个显著的不可向后兼容的变更是，除非显式将语言级别设置为2， `x: int` 现在会被认定为 Python的 `int` 类型 （在Cython0.29中x可能识别为任何Python对象）。为了抵消可能的影响，Cython仍然接受Python2.X中的 Python `int` 和 `long`。
+
+为了让你在处理你对于类型注解的理解和Cython不同的场景，Cython3现在支持在每个类或者每个函数的级别设置 `annotation_typing` [编译器指令](docs/29.md#编译器指令)。（译者注：在每个函数或者类的级别需要使用对应的装饰器, `@cython.annotation_typing` ）
+
+## C ++预增/后减 运算符
+
+Cython 3在预增/预减和后增/后减操作符之间进行了区分（Cython 0.29将两者都实现为预(增/减少)操作符）。这仅在使用 `cython.operator.postdecrement` / `cython.operator.postincrement` 时才会产生影响。当遇到错误时，需要添加相应的操作符。
+
+```python
+cdef cppclass Example:
+    Example operator++(int)
+    Example operator--(int)
+```
+
+## C ++的公开声明
+
+在Cython3.0中，C ++模式下的公开声明会用 `extern "C++"` 作为 C ++ API导出。 可以通过输出关键字 `CYTHON_EXTERN_C` 来允许用C ++实现的Cython模块在C中允许调用。
+
+## ** 幂运算符
+
+Cytyhon3 改变了幂运算符使之更贴近Python。结果是：
+
+1. `a**b` 两个整数会返回一个浮点值类型。
+2. `a**b` 一个或者多个非复数的浮点值会返回一个复数。
+
+可以通过设置 `cpow` [编译器指令](docs/29.md#编译器指令)来还原旧的行为。
 
