--- a/docs/28.md
+++ b/docs/28.md
@@ -1,4 +1,4 @@
-# 与外部 C 代码连接
+# 外部 C 代码的接口
 
 > 原文： [http://docs.cython.org/en/latest/src/userguide/external_C_code.html](http://docs.cython.org/en/latest/src/userguide/external_C_code.html)
 
