--- a/docs/36.md
+++ b/docs/36.md
@@ -1,18 +1,18 @@
-# 键入的内存视图
+# 类型化的内存视图
 
 > 原文： [http://docs.cython.org/en/latest/src/userguide/memoryviews.html](http://docs.cython.org/en/latest/src/userguide/memoryviews.html)
 
-类型化的内存视图允许有效访问内存缓冲区，例如 NumPy 阵列的内存缓冲区，而不会产生任何 Python 开销。 Memoryview 类似于当前的 NumPy 阵列缓冲支持（`np.ndarray[np.float64_t, ndim=2]`），但它们具有更多功能和更清晰的语法。
+类型化的内存视图允许高效地访问内存缓冲区，例如 NumPy 阵列的内存缓冲区，而不会产生任何 Python 开销。 Memoryview 类似于当前的 NumPy 数组缓冲区支持（`np.ndarray[np.float64_t, ndim=2]`），但它们具有更多功能和更清晰的语法。
 
-Memoryview 比旧的 NumPy 阵列缓冲支持更通用，因为它们可以处理更多种类的数据源。例如，它们可以处理 C 数组和 Cython 数组类型（ [Cython 数组](#view-cython-arrays) ）。
+Memoryview 比旧的 NumPy 阵列缓冲支持更通用，因为它们可以处理更多种类的数据源。例如，它们可以处理 C 数组和 Cython 数组类型。
 
-memoryview 可以在任何上下文中使用（函数参数，模块级，cdef 类属性等），并且几乎可以通过 [PEP 3118](https://www.python.org/dev/peps/pep-3118/) 缓冲区接口从任何暴露可写缓冲区的对象中获取。
+memoryview 可以在任何上下文中使用（函数参数，模块级，cdef 类属性等），并且可以获取自任何通过 [PEP 3118](https://www.python.org/dev/peps/pep-3118/) 缓冲区接口暴露可写缓冲区的对象。
 
 ## 快速入门
 
 如果您习惯使用 NumPy，以下示例将使您开始使用 Cython 内存视图。
 
-```py
+```python
 from cython.view cimport array as cvarray
 import numpy as np
 
@@ -80,7 +80,7 @@ Memoryview sum of C memoryview is 451
 
 ```
 
-## 使用记忆库视图
+## 使用内存视图
 
 ### 语法
 
@@ -88,21 +88,21 @@ Memoryview sum of C memoryview is 451
 
 要在一维 int 缓冲区上创建完整视图：
 
-```py
+```python
 cdef int[:] view1D = exporting_object
 
 ```
 
 完整的 3D 视图：
 
-```py
+```python
 cdef int[:,:,:] view3D = exporting_object
 
 ```
 
 它们也可以方便地作为函数参数：
 
-```py
+```python
 def process_3d_buffer(int[:,:,:] view not None):
     ...
 
@@ -127,9 +127,41 @@ def process_buffer(int[:,:] input_view not None,
 
 Cython 将自动拒绝不兼容的缓冲区，例如将三维缓冲区传递给需要二维缓冲区的函数会产生`ValueError`。
 
+在对一个自定义数据类型的NumPy数组上使用内存视图，你需要声明一个等效的紧密结构来模仿这种数据类型。
+
+```python
+import numpy as np
+
+CUSTOM_DTYPE = np.dtype([
+    ('x', np.uint8),
+    ('y', np.float32),
+])
+
+a = np.zeros(100, dtype=CUSTOM_DTYPE)
+
+cdef packed struct custom_dtype_struct:
+    # The struct needs to be packed since by default numpy dtypes aren't
+    # aligned
+    unsigned char x
+    float y
+
+def sum(custom_dtype_struct [:] a):
+
+    cdef:
+        unsigned char sum_x = 0
+        float sum_y = 0.
+
+    for i in range(a.shape[0]):
+        sum_x += a[i].x
+        sum_y += a[i].y
+
+    return sum_x, sum_y
+
+```
+
 ### 索引
 
-在 Cython 中，内存视图上的索引访问会自动转换为内存地址。以下代码请求 C `int`类型的项目和索引的二维内存视图：
+在 Cython 中，内存视图上的索引访问会自动转换为内存地址。以下代码请求一个 C `int`类型的项目的二维内存视图，并对其使用索引：
 
 ```py
 cdef int[:,:] buf = exporting_object
@@ -163,7 +195,7 @@ add_one(exporting_object)
 
 ```
 
-索引和切片可以在有或没有 GIL 的情况下完成。它基本上像 NumPy 一样工作。如果为每个维度指定了索引，您将获得基本类型的元素（例如 &lt;cite&gt;int&lt;/cite&gt; ）。否则，您将获得一个新视图。省略号表示您为每个未指定的维度获取连续切片：
+索引和切片可以在有或没有 GIL 的情况下完成。它基本上像 NumPy 一样工作。如果为每个维度指定了索引，您将获得基本类型的元素（例如 *<int>* ）。否则，您将获得一个新视图。省略号表示您为每个未指定的维度获取连续切片：
 
 ```py
 import numpy as np
@@ -181,7 +213,7 @@ my_view[10, ...]
 
 ### 复制
 
-内存视图可以复制到位：
+内存视图可以原位复制：
 
 ```py
 import numpy as np
@@ -199,11 +231,11 @@ to_view[:, :, :] = from_view
 
 ```
 
-也可以使用`copy()`和`copy_fortran()`方法复制它们;见 [C 和 Fortran 连续拷贝](#view-copy-c-fortran) 。
+也可以使用 `copy()` 和 `copy_fortran()` 方法复制它们;。
 
 ### 转置
 
-在大多数情况下（见下文），内存视图的转置方式与 NumPy 切片可以转置的方式相同：
+在大多数情况下（见下文），内存视图的可以用与 NumPy 切片相同的转置方式进行转置：
 
 ```py
 import numpy as np
@@ -217,7 +249,7 @@ cdef int[::1, :] f_contig = c_contig.T
 
 这为数据提供了一个新的转置视图。
 
-转置要求存储器视图的所有维度都具有直接存取存储器布局（即，没有通过指针的间接指令）。有关详细信息，请参阅 [指定更一般的存储器布局](#view-general-layouts) 。
+转置要求存储器视图的所有维度都具有可直接访问的内存布局（即，直接是指没有通过指针）。 
 
 ### Newaxis
 
@@ -270,7 +302,7 @@ print(is_y_in(b'hello Cython'))  # True
 
 ```
 
-注意，这不是 _ 要求 _ 输入缓冲区是只读的：
+注意，这并不 *要求* 输入缓冲区是只读的：
 
 ```py
 a = np.linspace(0, 10, num=50)
@@ -291,13 +323,13 @@ myslice = a   # ERROR: requesting writable memory view from read-only buffer!
 
 ## 与旧缓冲支持的比较
 
-您可能更喜欢使用旧视图的内存视图，因为：
+相较于旧的语法你应该会更喜欢内存视图，因为：
 
 *   语法更清晰
-*   Memoryview 通常不需要 GIL（参见 [Memoryviews 和 GIL](#view-needs-gil)）
-*   记忆视图要快得多
+*   内存视图通常不需要 GIL。
+*   内存视图要快得多
 
-例如，这是上面`sum3d`函数的旧语法等价物：
+例如，这是上面`sum3d`函数在旧语法下等效代码：
 
 ```py
 cpdef int old_sum3d(object[int, ndim=3, mode='strided'] arr):
@@ -313,7 +345,7 @@ cpdef int old_sum3d(object[int, ndim=3, mode='strided'] arr):
 
 ```
 
-请注意，我们不能像上面`sum3d`的 memoryview 版本那样使用`nogil`作为函数的缓冲版本，因为缓冲区对象是 Python 对象。但是，即使我们不将`nogil`与 memoryview 一起使用，它也要快得多。这是导入两个版本后 IPython 会话的输出：
+请注意，我们不能像上面`sum3d`的 memoryview 版本那样对函数的缓冲版本使用`nogil`，因为缓冲区对象是 Python 对象。但是，即使我们不将`nogil`与 memoryview 一起使用，它也要快得多。这是导入两个版本后 IPython 会话的输出：
 
 ```py
 In [2]: import numpy as np
@@ -328,30 +360,30 @@ In [5]: timeit -r15 sum3d(arr)
 
 ```
 
-## Python 缓冲支持
+## Python 缓冲区支持
 
-Cython 内存视图几乎支持导出 Python [新样式缓冲区](https://docs.python.org/3/c-api/buffer.html)接口的所有对象。这是 [PEP 3118](https://www.python.org/dev/peps/pep-3118/) 中描述的缓冲接口。 NumPy 数组支持此接口， [Cython 数组](#view-cython-arrays) 也是如此。 “几乎所有”是因为 Python 缓冲区接口允许数据数组中的 _ 元素 _ 本身成为指针; Cython 的内存视图还不支持这一点。
+Cython 内存视图几乎支持导出 Python [新风格缓冲区](https://docs.python.org/3/c-api/buffer.html)接口的所有对象。这是 [PEP 3118](https://www.python.org/dev/peps/pep-3118/) 中描述的缓冲接口。 NumPy 数组支持此接口， [Cython 数组](#view-cython-arrays) 也是如此。 “几乎所有”是因为 Python 缓冲区接口允许数据数组中的  *元素本身* 是指针; Cython 的内存视图还不支持这一点。
 
-## 存储器布局
+## 内存布局
 
-缓冲区接口允许对象以各种方式识别底层内存。除了数据元素的指针外，Cython 内存视图支持所有 Python 新型缓冲区布局。如果内存必须是外部例程的特定格式或代码优化，则了解或指定内存布局可能很有用。
+缓冲区接口允许对象以各种方式识别底层内存。除了数据元素不允许是指针外，Cython 内存视图支持所有 Python 新型缓冲区布局。如果内存必须满足外部例程或者出于代码优化目的要求的特定格式，你可能需要了解、指定内存布局。
 
 ### 背景
 
-概念如下：有数据访问和数据打包。数据访问意味着直接（无指针）或间接（指针）。数据打包意味着您的数据在内存中可能是连续的或不连续的，并且可以使用 _ 步幅 _ 来识别连续索引需要为每个维度进行的内存跳转。
+数据访问分为直接访问（无指针）或间接访问（指针）。数据打包意味着您的数据在内存中可能是连续的或不连续的。*步幅* 这个词用来代表：对每个维度而言，识别连续索引所需要进行的内存跳转的幅度。
 
-NumPy 数组提供了一个良好的跨步直接数据访问模型，因此我们将使用它们来更新 C 和 Fortran 连续数组的概念以及数据步幅。
+NumPy 数组提供了一个良好的跨步直接数据访问模型，因此我们将使用它作为例子来讲解 C 和 Fortran 连续数组的概念以及数据步幅。
 
-### 简要概述 C，Fortran 和跨步存储器布局
+### C，Fortran 和跨步内存布局的简要概述
 
-最简单的数据布局可能是 C 连续数组。这是 NumPy 和 Cython 数组中的默认布局。 C 连续意味着阵列数据在存储器中是连续的（见下文），并且阵列的第一维中的相邻元素在存储器中是最远的，而最后维中的相邻元素最接近在一起。例如，在 NumPy 中：
+最简单的数据布局可能是 C 连续数组。这是 NumPy 和 Cython 数组中的默认布局。 C 连续意味着数组数据在内存中是连续的（见下文），并且阵列的第一维中的相邻元素在内存中是最远的，而最后维中的相邻元素最接近在一起。例如，在 NumPy 中：
 
 ```py
 In [2]: arr = np.array([['0', '1', '2'], ['3', '4', '5']], dtype='S1')
 
 ```
 
-这里，`arr[0, 0]`和`arr[0, 1]`在存储器中相隔一个字节，而`arr[0, 0]`和`arr[1, 0]`相距 3 个字节。这引出了我们 _ 步幅 _ 的想法。数组的每个轴都有一个步长，这是从该轴上的一个元素到下一个元素所需的字节数。在上面的例子中，轴 0 和 1 的步幅显然是：
+这里， `arr[0, 0]` 和 `arr[0, 1]` 在内存中相隔一个字节，而 `arr[0, 0]` 和 `arr[1, 0]` 相距 3 个字节。因此我们可以提出 *步幅* 的概念。数组的每个轴都有一个步长，即从该轴上的一个元素到下一个元素所需的字节数。在上面的例子中，轴 0 和 1 的步幅显然是：
 
 ```py
 In [3]: arr.strides
@@ -359,7 +391,7 @@ Out[4]: (3, 1)
 
 ```
 
-对于 3D C 连续数组：
+对于 3维的 C 连续数组：
 
 ```py
 In [5]: c_contig = np.arange(24, dtype=np.int8).reshape((2,3,4))
@@ -379,9 +411,9 @@ Out[9]: (1, 2, 6)
 
 ```
 
-连续数组是单个连续存储器块包含数组元素的所有数据的数组，因此存储器块长度是数组中元素数量和元素大小（以字节为单位）的乘积。在上面的示例中，内存块长度为 2 * 3 * 4 * 1 个字节，其中 1 是 int8 的长度。
+连续数组是单个连续内存块包含数组元素的所有数据的数组，因此内存块长度是数组中元素数量和元素大小（以字节为单位）的乘积。在上面的示例中，内存块长度为 2 * 3 * 4 * 1 个字节，其中 1 是 int8 的长度。
 
-数组可以是连续的而不是 C 或 Fortran 顺序：
+数组可以是连续的而不必满足 C 或 Fortran 顺序：
 
 ```py
 In [10]: c_contig.transpose((1, 0, 2)).strides
@@ -408,7 +440,7 @@ UPDATEIFCOPY : False
 
 ### 内存视图布局的默认行为
 
-正如您在 [中看到的那样，指定更一般的内存布局](#view-general-layouts) ，您可以为内存视图的任何维度指定内存布局。对于未指定布局的任何维度，假定数据访问是直接的，并假设数据打包是跨越的。例如，这将是内存视图的假设，如：
+您可以为内存视图的任何维度指定内存布局。对于未指定布局的任何维度，数据访问被假定为直接访问，数据打包被假定为是跨越的（满足一个步幅）。例如，内存视图的假设就像是：
 
 ```py
 int [:, :, :] my_memoryview = obj
@@ -417,14 +449,14 @@ int [:, :, :] my_memoryview = obj
 
 ### C 和 Fortran 连续的内存视图
 
-您可以使用定义中的`::1`步骤语法为内存视图指定 C 和 Fortran 连续布局。例如，如果您确定您的内存视图将位于 3D C 连续布局之上，您可以编写：
+您可以使用定义中的 `::1` 步骤语法为内存视图指定 C 和 Fortran 连续布局。例如，如果您确定您的内存视图将位于 3维 C 连续布局之上，您可以编写：
 
 ```py
 cdef int[:, :, ::1] c_contiguous = c_contig
 
 ```
 
-其中`c_contig`可以是 C 连续的 NumPy 数组。第 3 位的`::1`意味着该第 3 维中的元素将是存储器中的一个元素。如果您知道将拥有 3D Fortran 连续数组：
+其中 `c_contig` 可以是 C 连续的 NumPy 数组。第 3 位的 `::1` 意味着该第 3 维中的元素将是存储器中的一个元素。如果您知道将拥有 3维 Fortran 连续数组：
 
 ```py
 cdef int[::1, :, :] f_contiguous = f_contig
@@ -461,11 +493,11 @@ ValueError: ndarray is not C-contiguous
 
 ```
 
-因此，切片类型规范中的 &lt;cite&gt;:: 1&lt;/cite&gt; 指示数据在哪个维度上是连续的。它只能用于指定完整的 C 或 Fortran 连续性。
+因此，切片类型说明中的 *::1* 指示数据在哪个维度上是连续的。它只能用于指定完整的 C 或 Fortran 连续性。
 
 ### C 和 Fortran 连续副本
 
-可以使用`.copy()`和`.copy_fortran()`方法使 C 或 Fortran 连续复制：
+可以使用 `.copy()` 和 `.copy_fortran()` 方法将副本变为 C 或 Fortran 连续：
 
 ```py
 # This view is C contiguous
@@ -478,15 +510,15 @@ cdef int[::1, :] f_contiguous_slice = myview.copy_fortran()
 
 ### 指定更一般的内存布局
 
-可以使用先前看到的`::1`切片语法或使用`cython.view`中的任何常量指定数据布局。如果在任何维度中都没有给出说明符，则假定数据访问是直接的，并假设数据打包是跨步的。如果你不知道维度是直接的还是间接的（因为你可能从某个库得到一个带缓冲接口的对象），那么你可以指定&lt;cite&gt;泛型&lt;/cite&gt;标志，在这种情况下它将在运行时确定。
+可以使用先前看到的 `::1` 切片语法或使用 `cython.view` 中的任何常量指定数据布局。如果在任何维度中都没有给出说明符，则假定数据访问是直接的，并假设数据打包是跨步的。如果你不知道维度是直接的还是间接的（因为你可能从某个库得到一个带缓冲接口的对象），那么你可以指定 *泛型* 标志，在这种情况下它将在运行时确定。
 
 标志如下：
 
-*   通用 - 跨步，直接或间接
-*   跨步 - 跨步（直接）（这是默认值）
-*   间接 - 跨步和间接的
-*   连续的 - 连续的和直接的
-*   indirect_contiguous - 指针列表是连续的
+*   generic 通用 - 跨步，直接或间接
+*   strided 跨步 - 跨步（直接）（这是默认值）
+*   indirect 间接 - 跨步和间接的
+*   contiguous 连续的 - 连续的和直接的
+*   indirect_contiguous  间接连续 - 指针列表是连续的
 
 它们可以像这样使用：
 
@@ -524,7 +556,7 @@ cdef int[::1, ::view.indirect, :] e
 
 ```
 
-&lt;cite&gt;连续&lt;/cite&gt;标志和 &lt;cite&gt;:: 1&lt;/cite&gt; 说明符之间的区别在于前者仅指定一个维度的邻接，而后者指定所有后续（Fortran）或前一个（C）的邻接。 ）尺寸：
+*continguous* 和 *::1* 之间的区别在于前者仅指定一个维度的邻接，而后者指定所有维度（对Fortran是后续、对C是之前）：
 
 ```py
 cdef int[:, ::1] c_contig = ...
@@ -541,7 +573,7 @@ cdef int[:, ::1] myslice = c_contig[::2]
 
 ## Memoryviews 和 GIL
 
-正如您将从 [快速入门](#view-quickstart) 部分中看到的那样，内存视图通常不需要 GIL：
+内存视图通常不需要 GIL：
 
 ```py
 cpdef int sum3d(int[:, :, :] arr) nogil:
@@ -698,21 +730,6 @@ def func(double[:] myarray not None):
 
 由于在 C 中使用指针是无处不在的，这里我们给出一个快速示例，说明如何调用其参数包含指针的 C 函数。假设您想要使用 NumPy 管理数组（分配和释放）（它也可以是 Python 数组，或者任何支持缓冲区接口的数组），但是您希望使用`C_func_file.c`中实现的外部 C 函数对此数组执行计算]：
 
-| 
-
-```py
-1
-2
-3
-4
-5
-6
-7
-8
-9
-```
-
- | 
 
 ```py
 #include "C_func_file.h"
@@ -727,22 +744,9 @@ void multiply_by_10_in_C(double arr[], unsigned int n)
 
 ```
 
- |
 
 此文件附带一个名为`C_func_file.h`的头文件，其中包含：
 
-| 
-
-```py
-1
-2
-3
-4
-5
-6
-```
-
- | 
 
 ```py
 #ifndef C_FUNC_FILE_H
@@ -754,46 +758,10 @@ void multiply_by_10_in_C(double arr[], unsigned int n);
 
 ```
 
- |
 
 其中`arr`指向数组，`n`是其大小。
 
 您可以通过以下方式在 Cython 文件中调用该函数：
-
-| 
-
-```py
- 1
- 2
- 3
- 4
- 5
- 6
- 7
- 8
- 9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-```
-
- | 
 
 ```py
 cdef extern from "C_func_file.c":
@@ -826,9 +794,8 @@ print(multiply_by_10(b))  # but our function still works as expected.
 
 ```
 
- |
 
-Several things to note:
+有几件事需要注意:
 
 *   `::1`请求 C 连续视图，如果缓冲区不是 C 连续则失败。参见 [C 和 Fortran 连续记忆视图](#c-and-fortran-contiguous-memoryviews) 。
 *   `&arr_memview[0]`可以理解为'存储器视图的第一个元素的地址'。对于连续数组，这相当于平坦内存缓冲区的起始地址。
